# my_model

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  concat_kv.cu  concat_kv.h  cublas_utils.cc  cublas_utils.h  decoderattn.cu  decoderattn.h  embedding.cu  embedding.h  linear.cu  linear.h  mask.cu  mask.h  maskScaleSoftmax.cu  maskScaleSoftmax.h  padoffset.cu  padoffset.h  padrope.cu  padrope.h  repeat_kv.cu  repeat_kv.h  rmsnorm.cu  rmsnorm.h  sampling.cu  sampling.h  swiglu.cu  swiglu.h  topk.cu  topk.h  transremv.cu  transremv.h
src/layers/: CMakeLists.txt
src/layers/attention/: CMakeLists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/decoder/: CMakeLists.txt  context_decoder.cpp  context_decoder.h  self_decoder.cpp  self_decoder.h
src/layers/ffn/: CMakeLists.txt  ffn.cpp  ffn.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/model/: CMakeLists.txt  basemodel.h
src/model/llama/: llama.cpp  llama.h  llama_param.h
src/utils/: params.h  string_utils.h  tensor.h
src/weights/: base_weight.h
src/weights/llama/: attention_weights.h  embedding_weights.h  ffn_weights.h  layer_weights.cc  llama_weights.cc  llama_weights.h  rmsnorm_weights.h
tests/unittests/: CMakeLists.txt  have_a_try.cu  have_a_try2.cu  have_a_try3.cu  test_concatkv.cu  test_decoderattn.cu  test_embedding.cu  test_linear.cu  test_mask.cu  test_maskscalesoftmax.cu  test_padoffset.cu  test_padrope.cu  test_repeatkv.cu  test_rmsnorm.cu  test_sampling.cu  test_swiglu.cu  test_topk.cu  test_transremv.cu  trytry  trytrytry
